--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": "https://olhavoloshenko.github.io/goit-react-hw-02-feedback/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
+    "@emotion/css": "^11.9.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
@@ -36,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4"
   }
 }
